[package]
name = "matrix-display"
version = "0.1.0"
authors = ["Tobin Yehle <tobinyehle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dev-dependencies]
heapless = "0.7.14"
void = { version="1.0", default-features=false }
